# trading-library

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: codeql.yaml
data/: test.csv
samples/: local_run.py  woker_run.py
src/: __main__.py  app.py
src/clients/: bingx.py  telegram.py
src/clients/base/: __init__.py
src/core/: container.py  exceptions.py  logger.py  settings.py
src/db/: db_connector.py
src/db/alembic/: alembic.ini  env.py
src/db/alembic/versions/: 20241013_764146ad35f3_init.py  20241014_134423acdb34_strategy.py
src/exchanges/: __init__.py  bingx.py
src/exchanges/bingx/: client.py  exchange.py  schemas.py
src/exchanges/local/: config.py  exchange.py
src/schemas/: base.py  bingx.py  enums.py  params.py  strategy_params.py
src/strategies/: base.py  example.py
src/trading/: chart.py  notifier.py  worker.py
src/trading/exchanges/: base.py  bingx.py  fabric.py  local.py  puller.py
src/trading/indicators/: __init__.py  base.py  ema.py  rsi.py
src/trading/strategies/: base.py  factory.py
trading_lib/: app.py  config.py
trading_lib/common/: chart.py  container.py  enums.py  exceptions.py  exchange.py  logging.yaml  notifier.py  params.py  puller.py  schemas.py  woker.py
trading_lib/common/indicators/: __init__.py  base.py  ema.py  rsi.py
trading_lib/db/: config.py  db_connector.py  models.py
trading_lib/db/alembic/: env.py  script.py.mako
trading_lib/db/alembic/versions/: 20241013_764146ad35f3_init.py  20241014_134423acdb34_strategy.py
trading_lib/exchanges/: factory.py
trading_lib/exchanges/bingx/: config.py  exchange.py  schemas.py
trading_lib/exchanges/local/: exchange.py
trading_lib/strategies/: base.py  factory.py
trading_lib/telegram/: client.py  config.py  notifier.py  schemas.py
