[tool.poetry]
name = "trading-library"
version = "0.1.0"
description = ""
authors = ["Aleksey Matyunin <matyunin.as@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
async-client-lib = "^0.1.5"
pandas = "^2.2.3"
plotly = "^5.24.1"
alembic = "^1.14.1"
sqlalchemy = "^2.0.37"
kaleido = "0.1.0post1"

[tool.poetry.group.dev.dependencies]
aioresponses = "^0.7.6"
black = "^24.10.0"
mypy = "^0.942"
pre-commit = "^3.3.2"
pytest = "^8.3.4"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
ruff = "^0.2.1"

[tool.black]
line-length = 100
target-version = ["py311"]
preview = true

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "W", "T", "C90", "I", "N", "ANN", "S", "B", "A", "PL", "PTH", "F", "ARG"]
lint.ignore = [
    "ANN101",  # Missing type annotation for `self` in method
    "ANN102",  # Missing type annotation for `cls` in classmethod
    "ANN003",  # Missing type annotation for `**kwargs`

    # TODO: fix codes below
    "N815",  # Variable `.....` in class scope should not be mixedCase
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN001", "ANN201"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
